--- a/ProjectDemonstration/templates/index.html
+++ b/ProjectDemonstration/templates/index.html
@@ -200,7 +200,7 @@ vizElement2.parentNode.insertBefore(scriptElement2, vizElement2);
 <section id="video" class="section">
     <h2>Project Demo Video</h2>
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID"
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ZmgbcdDENAw"
         title="YouTube video" frameborder="0" allowfullscreen></iframe>
     </div>
 </section>
@@ -237,4 +237,5 @@ vizElement2.parentNode.insertBefore(scriptElement2, vizElement2);
 
 
 {% endblock %}
+
 
