--- a/ProjectDemonstration/templates/index.html
+++ b/ProjectDemonstration/templates/index.html
@@ -200,8 +200,9 @@ vizElement2.parentNode.insertBefore(scriptElement2, vizElement2);
 <section id="video" class="section">
     <h2>Project Demo Video</h2>
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ZmgbcdDENAw"
-        title="YouTube video" frameborder="0" allowfullscreen></iframe>
+        <!-- <iframe width="560" height="315" src="https://www.youtube.com/watch?v=ZmgbcdDENAw"
+        title="YouTube video" frameborder="0" allowfullscreen></iframe> -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZmgbcdDENAw?si=qeAOulzvehsyZ-Ff" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 </section>
 
@@ -237,5 +238,6 @@ vizElement2.parentNode.insertBefore(scriptElement2, vizElement2);
 
 
 {% endblock %}
+
 
 
