--- a/ProjectDemonstration/templates/index.html
+++ b/ProjectDemonstration/templates/index.html
@@ -175,7 +175,7 @@ vizElement2.parentNode.insertBefore(scriptElement2, vizElement2);
             <h3>Basina Veera Bavitha</h3>
             <p class="role">Team Member</p>
             <p class="college">Godavari Institute Of Engineering & Technology</p>
-            <p class="branch">EEE</p>
+            <p class="branch">CSE(AI/ML)</p>
         </div>
 
         <!-- Member 3 -->
@@ -238,6 +238,7 @@ vizElement2.parentNode.insertBefore(scriptElement2, vizElement2);
 
 
 {% endblock %}
+
 
 
 
